feat: integrate Gemini 3 Flash and add diagnostic dashboard

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@google/genai": "^1.40.0",
     "@prisma/client": "^6.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "framer-motion": "^12.31.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
